syntax = "proto3";

package ru.sinvic;

option java_multiple_files = true;

message ClientMessage {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message ServerResponse {
  int64 responseNumber = 1;
}

service RemoteService {
  rpc getNumbers(ClientMessage) returns (stream ServerResponse);
}